# cdcl-solver

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: ExternalDependencies.cmake
include/benchmark/: commandLineArgumentParser.hpp
include/dimacs/: dimacsParser.hpp  literalInContainerIndexLookup.hpp  literalOccurrenceLookup.hpp  localClauseLiteralRemover.hpp  problemDefinition.hpp
include/optimizations/: arrayBasedBlockedClauseEliminator.hpp  avlIntervalTreeBlockedClauseEliminator.hpp  avlTree.hpp  avlTreeBlockedClauseEliminator.hpp  baseBlockedClauseEliminator.hpp  blockedClauseElimination.hpp
include/optimizations/blockedClauseElimination/: avlIntervalTree.hpp  avlIntervalTreeBlockedClauseEliminator.hpp  avlIntervalTreeNode.hpp  baseBlockedClauseEliminator.hpp  blockingLiteralGenerator.hpp  literalOccurrenceBlockedClauseEliminator.hpp
include/optimizations/blockedClauseElimination/candidateSelection/: baseCandidateSelector.hpp  clauseLengthBasedCandidateSelector.hpp  minimumClauseLengthCandidateSelector.hpp  overlapBasedCandidateSelector.hpp
include/optimizations/blockedClauseElimination/intervalTree/: avlIntervalTree.hpp  avlIntervalTreeNode.hpp
include/optimizations/setBlockedClauseElimination/: avlIntervalTreeSetBlockedClauseEliminator.hpp  baseBlockingSetCandidateGenerator.hpp  baseSetBlockedClauseEliminator.hpp  literalOccurrenceBlockingSetCandidateGenerator.hpp  literalOccurrenceSetBlockedClauseEliminator.hpp
include/optimizations/utils/: avlIntervalTree.hpp  avlIntervalTreeNode.hpp  binarySearchUtils.hpp  clauseCandidateSelector.hpp
include/solver/: solver.hpp
include/utils/commandLine/: commandLineParser.hpp
src/: CMakeLists.txt  main.cpp
src/benchmark/: CMakeLists.txt  blockedClauseBenchmark.cpp  commandLineArgumentParser.cpp  setBlockedClauseBenchmark.cpp
src/dimacs/: dimacsParser.cpp  literalOccurrenceLookup.cpp  localClauseLiteralRemover.cpp  problemDefinition.cpp
src/optimizations/: arrayBasedBlockedClauseEliminator.cpp  avlIntervalTreeBlockedClauseEliminator.cpp  avlTree.cpp  avlTreeBlockedClauseEliminator.cpp  blockedClauseElimination.cpp  blockedClauseEliminationBenchmarkExecution.cpp
src/optimizations/blockedClauseElimination/: avlIntervalTree.cpp  avlIntervalTreeBlockedClauseEliminator.cpp  avlIntervalTreeNode.cpp  baseBlockedClauseEliminator.cpp  blockedClauseEliminationBenchmarkExecution.cpp  blockingLiteralGenerator.cpp  literalOccurrenceBlockedClauseEliminator.cpp
src/optimizations/blockedClauseElimination/candidateSelection/: clauseLengthBasedCandidateSelector.cpp  minimumClauseLengthCandidateSelector.cpp  overlapBasedCandidateSelector.cpp
src/optimizations/blockedClauseElimination/intervalTree/: avlIntervalTree.cpp  avlIntervalTreeNode.cpp
src/optimizations/setBlockedClauseElimination/: avlIntervalTreeSetBlockedClauseEliminator.cpp  literalOccurrenceBlockingSetCandidateGenerator.cpp  literalOccurrenceSetBlockedClauseEliminator.cpp
src/optimizations/utils/: avlIntervalTree.cpp  avlIntervalTreeNode.cpp  clauseCandidateSelector.cpp
src/utils/commandLine/: commandLineParser.cpp
test/: CMakeLists.txt  avlIntervalTreeNodeTests.cpp  avlIntervalTreeTests.cpp  bSearchUtilsTests.cpp  blockedClauseEliminatorTests.cpp  blockingLiteralGeneratorTests.cpp  clauseCandidateSelectorTests.cpp  dimacsParserTests.cpp  literalOccurrenceBlockingSetCandidateGeneratorTests.cpp  literalOccurrenceSetBlockedClauseEliminatorTests.cpp  setBlockedClauseEliminatorTests.cpp
test/dimacs/: dimacsParserTestFixture.hpp  dimacsParserTests.cpp
test/optimizations/: avlIntervalTreeTests.cpp  avlIntervalTreeTestsFixture.hpp  avlTreeTests.cpp  avlTreeTestsFixture.hpp  baseBlockedClauseEliminationTestsFixture.hpp  blockedClauseEliminationTests.cpp  opaqueAvlIntervalTree.hpp  opaqueAvlTree.hpp
